# homelab-subtitle-service

./: .env.example  .gitignore  DockerFile  README.md  docker-compose.yml  pendings.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci-standard.yml  docker-publish.yaml  issue-title-validator.yml  label-validator.yml  main-build.yml  pr-validation.yml  release.yml  security-quality.yml
docs/: CI_CD_QUICKSTART.md  CI_CD_SETUP_SUMMARY.md  CI_CD_WORKFLOWS.md  MONITORING.md  MONITORING_IMPLEMENTATION.md
examples/: analyze_logs.py  log_viewer.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Progress.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  JobDetailPage.tsx  KPIsPage.tsx  LoginPage.tsx  LogsPage.tsx  NewJobPage.tsx  RegisterPage.tsx  SettingsPage.tsx  WikiPage.tsx  index.ts
frontend/src/types/: index.ts
src/homelab_subs/: cli.py  logging_config.py
src/homelab_subs/core/: __init__.py  audio.py  comparison.py  db_logger.py  monitored_pipeline.py  performance.py  pipeline.py  srt.py  sync.py  text_utils.py  transcription.py  translation.py
src/homelab_subs/examples/: basic_jobs.yaml
src/homelab_subs/server/: __init__.py  api.py  auth.py  base_repository.py  job_service.py  models.py  queue.py  repository.py  settings.py  worker.py
src/homelab_subs/services/: job_service.py
src/tests/: test_api.py  test_audio.py  test_auth.py  test_auth_service.py  test_cli.py  test_cli_server_commands.py  test_comparison.py  test_db_logger.py  test_job_service.py  test_logging.py  test_monitored_pipeline.py  test_performance.py  test_pipeline.py  test_pipeline_runner.py  test_queue.py  test_repository.py  test_server.py  test_settings_repository.py  test_srt.py  test_sync.py  test_transcription.py  test_translation.py  test_user_repository.py  test_worker.py  test_worker_imports.py
